--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-    "name": "@remobile/react-native-toast",
-    "version": "1.0.5",
+    "name": "odgn-react-native-toast",
+    "version": "1.1.0",
     "description": "A android like toast for react-native support for ios and android",
     "main": "index.js",
-    "author": {
+    "author": [{
         "name": "YunJiang.Fang",
         "email": "42550564@qq.com"
     },
+    {
+        "name": "Alexander Veenendaal",
+        "email": "alex@opendoorgonorth.com"
+    }],
     "license": "MIT",
     "keywords": [
         "react-native",
@@ -18,12 +22,12 @@
         "remobile",
         "mobile"
     ],
-    "homepage": "https://github.com/remobile/react-native-toast",
+    "homepage": "https://github.com/odogono/react-native-toast",
     "bugs": {
-        "url": "https://github.com/remobile/react-native-toast/issues"
+        "url": "https://github.com/odogono/react-native-toast/issues"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/remobile/react-native-toast.git"
+        "url": "git://github.com/odogono/react-native-toast.git"
     }
 }
